# kafka-connect-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  release.yaml
kafka_connect_manager/: __main__.py  cli.py  constants.py  main.py  utils.py
tests/: test_kafka_connect_manager.py
