[tool.poetry]
name = "kafka-connect-manager"
version = "0.3.0"
description = "A tool to manage Apache Kafka Connect connectors and tasks using asyncio"
authors = ["Ajamal Khan <13559558+khan-ajamal@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/khan-ajamal/kafka-connect-manager"
keywords = ["kafka", "kafka connect"]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.6.1"}
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.971"
pylint = "^2.15.0"
ipython = "^8.4.0"
ipdb = "^0.13.9"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kcm = "kafka_connect_manager.cli:app"
